--- a/frontend/src/app/components/cadastro-produtor/cadastro-produtor.component.html
+++ b/frontend/src/app/components/cadastro-produtor/cadastro-produtor.component.html
@@ -23,7 +23,7 @@ id="cadastro-form"
 </form>
 
 <section class="finished" *ngIf="!showForm">
-    <h2>{{ isFormSucess ? 'Cadastro efetuado com sucesso!' : 'Falha ao realizar o cadastro' }}</h2>
+    <h2>{{ isFormSucess ? 'Cadastro efetuado com sucesso!' : 'Falha ao realizar o cadastro. Tente novamente mais tarde.' }}</h2>
     <a [routerLink]="['']" class="simple-button-blue">Home</a>
     <a [routerLink]="['../login']" class="simple-button-blue">Login</a>
 </section>
