--- a/frontend/src/app/views/login/login.component.html
+++ b/frontend/src/app/views/login/login.component.html
@@ -5,7 +5,7 @@
 <main class="main">
     <form
     #form="ngForm"
-    (ngSubmit)="teste($event)"
+    (ngSubmit)="login($event)"
     [formGroup]="loginForm"
     id="login-form"
     >
@@ -13,11 +13,11 @@
         <section>
             <div class="form-input">
                 <label for="email">Email</label>
-                <input type="email" formControlName="email" name="email">
+                <input type="email" formControlName="email" name="email" [class.invalid-input]="form.submitted && !loginForm.get('email')?.valid">
             </div>
             <div class="form-input">
                 <label for="senha">Senha</label>
-                <input type="password" formControlName="senha" name="senha">
+                <input type="password" formControlName="senha" name="senha" [class.invalid-input]="form.submitted && !loginForm.get('senha')?.valid">
             </div>
         </section>
 
