--- a/frontend/src/app/views/login/login.component.scss
+++ b/frontend/src/app/views/login/login.component.scss
@@ -84,6 +84,11 @@
     -webkit-text-fill-color: #fff !important;
 }
 
+.invalid-input {
+    border-bottom: 2px solid red !important;
+    background-color: rgba(255, 255, 255, 0.1) !important;
+}
+
 @media only screen and (min-width: 768px) {
 
     .logo img {
