--- a/frontend/src/app/views/login/login.component.html
+++ b/frontend/src/app/views/login/login.component.html
@@ -22,6 +22,6 @@
         </section>
 
         <button type="submit" class="simple-button">Entrar</button>
-        <a [routerLink]="['esqueci-senha']">Esqueci minha senha</a>
+        <a [routerLink]="['../login']">Esqueci minha senha</a>
     </form>
 </main>
