Adicionar voltar na seleção do tipo do usuário

--- a/frontend/src/app/components/cadastro-produtor/cadastro-produtor.component.html
+++ b/frontend/src/app/components/cadastro-produtor/cadastro-produtor.component.html
@@ -1,6 +1,6 @@
 <form
 #form="ngForm"
-(ngSubmit)="cadastraProdutor($event)"
+(ngSubmit)="fazCadastro($event)"
 [formGroup]="cadastroForm"
 id="cadastro-form"
 *ngIf="showForm"
@@ -18,7 +18,7 @@ id="cadastro-form"
         <ng-template #elseBlock>
             <button type="submit" class="simple-button-blue">Enviar</button>
         </ng-template>
-        <a href="javascript: void(0);" class="simple-button-red" *ngIf="qualInput" (click)="voltaForm()">Voltar</a>
+        <a href="javascript: void(0);" class="simple-button-red" (click)="voltaForm()">Voltar</a>
     </div>
 </form>
 
