--- a/frontend/src/app/views/login/login.component.scss
+++ b/frontend/src/app/views/login/login.component.scss
@@ -1,23 +1,3 @@
-.logo {
-    position: absolute;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    margin: 1rem;
-}
-
-.logo h4 {
-    font-size: 1.5rem;
-    color: #00386f;
-    font-weight: bold;
-    padding: 0.5rem;
-}
-
-.logo img {
-    width: 10vw; 
-}
-
 .main {
     height: 100vh;
     min-height: 600px;
@@ -44,6 +24,14 @@
     color: #fff;
     font-size: 2rem;
     margin-bottom: 2rem;
+}
+
+.main p {
+    color: #fff;
+    padding: 2px;
+    max-width: 80%;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 .main button {
@@ -94,11 +82,7 @@
 }
 
 @media only screen and (min-width: 768px) {
-
-    .logo img {
-        width: 4vw;
-    }
-
+    
     .main form {
         width: 25vw;
 
