--- a/frontend/src/app/views/cadastro/cadastro.component.html
+++ b/frontend/src/app/views/cadastro/cadastro.component.html
@@ -1,7 +1,4 @@
-<header class="logo">
-    <a [routerLink]="['']"><img src="./../../../assets/logo_png_agricolab_200x200.png" alt="Logo Agricolab"></a>
-    <a [routerLink]="['']"><h4>Agricolab</h4></a>
-</header>
+<app-inner-header></app-inner-header>
 
 <main class="main">
     <div class="header">
