Ajustes gerais no projeto

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -18,6 +18,11 @@ a, p, span, h1, h2, h3, h4, label {
     font-size: 1em;
 }
 
+h1 {
+    font-size: 2rem;
+    text-align: center;
+}
+
 img {
     image-rendering: -moz-crisp-edges;
     image-rendering: -o-crisp-edges;
