--- a/frontend/src/app/components/template/footer/footer.component.scss
+++ b/frontend/src/app/components/template/footer/footer.component.scss
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 10px;
+    // margin-top: 10px;
     display: flex;
     flex-direction: column;
 }
