Adicionar e integrar login para o Produtor

--- a/frontend/src/app/views/login/login.component.html
+++ b/frontend/src/app/views/login/login.component.html
@@ -18,8 +18,12 @@
                 <input type="password" formControlName="senha" name="senha" [class.invalid-input]="form.submitted && !loginForm.get('senha')?.valid">
             </div>
         </section>
-        <p *ngIf="!isUserValid">Email ou senha incorretos ou não existem.</p>
+        <p *ngIf="isUserValid">Email ou senha incorretos ou não existem.</p>
 
+        <div class="produtor-checkbox">
+            <input formControlName="produtor" type="checkbox" name="produtor" id="produtor">
+            <label for="produtor">Entrar como produtor</label>
+        </div>
         <button type="submit" class="simple-button">Entrar</button>
         <!-- <a [routerLink]="['../login']">Esqueci minha senha</a> -->
     </form>
