--- a/frontend/src/app/views/perfil/perfil.component.html
+++ b/frontend/src/app/views/perfil/perfil.component.html
@@ -4,7 +4,8 @@
     <h1>Olá,</h1>
     <h2>{{ user.nomeUsuario }}</h2>
 
-    <a [routerLink]="['../produtos/listar']" class="simple-button-blue">Meus Produtos</a>
+    <a [routerLink]="['../produtos/listar']" class="simple-button-blue" *ngIf="user.isProdutor">Meus Produtos</a>
+    <a [routerLink]="['../pedidos/listar']" class="simple-button-blue" *ngIf="!user.isProdutor">Meus Pedidos</a>
     <a [routerLink]="['../perfil/editar']" class="simple-button-blue">Editar Perfil</a>
     <a (click)="logout()" class="simple-button-blue">Sair</a>
     <a [routerLink]="['../perfil/apagar']" class="simple-button-red">Apagar Perfil</a>
