--- a/frontend/src/app/views/produtos/listar-produtos/listar-produtos.component.html
+++ b/frontend/src/app/views/produtos/listar-produtos/listar-produtos.component.html
@@ -19,9 +19,9 @@
                 <p>{{ produto.idProduto || '-' }}</p>
                 <p>{{ produto.nomeProduto || '-' }}</p>
                 <p>{{ produto.quantidadeProduto || '-' }}</p>
-                <p>R$ {{ produto.valorProduto || '-' }}</p>
+                <p>{{ (produto.valorProduto | currency:'BRL') || '-' }}</p>
                 <div class="buttons">
-                    <a [routerLink]="['../editar']" [queryParams]="{ idProduto: produto.idProduto, nomeProduto: produto.nomeProduto }" class="simple-button">Editar</a>
+                    <a [routerLink]="['../editar']" [queryParams]="{ idProduto: produto.idProduto, nomeProduto: produto.nomeProduto, quantidadeProduto: produto.quantidadeProduto, valorProduto: produto.valorProduto }" class="simple-button">Editar</a>
                     <a [routerLink]="['../apagar']" [queryParams]="{ idProduto: produto.idProduto, nomeProduto: produto.nomeProduto }" class="simple-button-red">Apagar</a>
                 </div>
             </div>
