--- a/frontend/src/app/views/mapa/mapa.component.scss
+++ b/frontend/src/app/views/mapa/mapa.component.scss
@@ -60,7 +60,7 @@
 .submit-pesquisa {
     background-color: #fff;
     cursor: pointer;
-    margin: 0 5px;
+    padding: 0 5px;
     display: flex;
     justify-content: center;
     align-items: center;
