--- a/frontend/src/app/views/pedidos/pedidos.component.scss
+++ b/frontend/src/app/views/pedidos/pedidos.component.scss
@@ -8,6 +8,7 @@
 }
 
 .produtor {
+    max-width: 80vw;
     margin-top: 5rem;
     display: flex;
     flex-direction: column;
@@ -21,6 +22,7 @@
 
 .produtor h2 {
     font-size: 1.3rem;
+    text-align: center;
 }
 
 .pedidos > h1 {
@@ -42,4 +44,10 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+}
+
+.carrinho-icon {
+    position: fixed;
+    bottom: 1.5rem;
+    right: 1.5rem;
 }
