--- a/frontend/src/app/components/item-pedido/item-pedido.component.scss
+++ b/frontend/src/app/components/item-pedido/item-pedido.component.scss
@@ -6,6 +6,7 @@
     flex-direction: column;
     align-items: center;
     min-width: 90vw;
+    position: relative;
 }
 
 .produto p {
@@ -33,6 +34,38 @@
     width: 3rem;
 }
 
+.adicionado {
+    background-color: #5cdb94;
+    top: 0.2rem;
+    bottom: 0.2rem;
+    left: 0.2rem;
+    right: 0.2rem;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.adicionado p {
+    color: #00386f;
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+}
+
+.display-none {
+    display: none;
+}
+
+.display {
+    opacity: 1;
+    animation: fade 2s linear forwards;
+}
+
+@keyframes fade {
+    0%,100% { opacity: 0 }
+    20%,80% { opacity: 1 }
+}
 
 @media only screen and (min-width: 768px) {
     
