--- a/frontend/src/app/components/carrinho/carrinho.component.html
+++ b/frontend/src/app/components/carrinho/carrinho.component.html
@@ -12,7 +12,7 @@
         <p>Ações</p>
     </div>
     <div class="carrinho-container" *ngIf="!isPedidoFeito;else elseBlock">
-        <app-item-carrinho *ngFor="let produto of listaProdutos" [produto]="produto"></app-item-carrinho>
+        <app-item-carrinho *ngFor="let produto of listaProdutos" [produto]="produto" (removerItem)="removerItem($event)"></app-item-carrinho>
         <div *ngIf="!listaProdutos" class="nenhum-produto">
             <h2>Nenhum produto no carrinho.</h2>
         </div>
