Ajustes no componente Item Carrinho

--- a/frontend/src/app/components/item-carrinho/item-carrinho.component.html
+++ b/frontend/src/app/components/item-carrinho/item-carrinho.component.html
@@ -2,7 +2,7 @@
     <div class="item-carrinho">
         <p>{{ produto.nomePedido }}</p>
         <p>{{ produto.quantidadePedido }}</p>
-        <p>{{ produto.precoPedido }}</p>
+        <p>{{ (produto.precoPedido | currency:'BRL') || '-' }}</p>
         <a class="simple-button-red" (click)="removerProduto()">X</a>
     </div>
 </div>
