--- a/frontend/src/app/views/pedidos/listar-pedidos/listar-pedidos.component.html
+++ b/frontend/src/app/views/pedidos/listar-pedidos/listar-pedidos.component.html
@@ -8,19 +8,19 @@
     <div class="container">
         <div class="lista">
             <div class="lista-header">
-                <p>Id</p>
-                <p>Produto</p>
+                <p>Id Pedido</p>
+                <p>Produtos</p>
                 <p>Quantidade</p>
                 <p>Valor Total</p>
                 <p>Ações</p>
             </div>
             <div class="lista-itens" *ngFor="let pedido of pedidosArray; index as i;">
-                <p>{{ pedido.idProduto || '-' }}</p>
-                <p>{{ pedido.nomeProduto || '-' }}</p>
-                <p>{{ pedido.quantidadeProduto || '-' }}</p>
-                <p>{{ (pedido.valorProduto | currency:'BRL') || '-' }}</p>
+                <p>{{ pedido.idPedido || '-' }}</p>
+                <p>{{ pedido.nomePedido || '-' }}</p>
+                <p>{{ pedido.quantidadePedido || '-' }}</p>
+                <p>{{ (pedido.valorPedido | currency:'BRL') || '-' }}</p>
                 <div class="buttons">
-                    <a [routerLink]="['../apagar']" [queryParams]="{ idProduto: pedido.idProduto, nomeProduto: pedido.nomeProduto }" class="simple-button-red">Cancelar</a>
+                    <a [routerLink]="['../apagar']" [queryParams]="{ idPedido: pedido.idPedido }" class="simple-button-red">Cancelar</a>
                 </div>
             </div>
             <p class="none-message" *ngIf="!pedidosArray.length">Nenhum produto para listar.</p>
