--- a/frontend/src/app/views/produtos/listar-produtos/listar-produtos.component.scss
+++ b/frontend/src/app/views/produtos/listar-produtos/listar-produtos.component.scss
@@ -3,11 +3,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    margin-bottom: 3rem;
 }
 
 .produtos h1 {
     margin-bottom: 2rem;
+    margin-top: 5rem;
 }
 
 .container {
