--- a/frontend/src/app/views/pedidos/listar-pedidos/listar-pedidos.component.html
+++ b/frontend/src/app/views/pedidos/listar-pedidos/listar-pedidos.component.html
@@ -1,7 +1,7 @@
 <app-inner-header></app-inner-header>
 
 <section class="pedidos">
-    <h1>Pedidos</h1>
+    <h1>Pedidos Realizados</h1>
 
     <a [routerLink]="['../../perfil']" class="simple-button-red">Voltar</a>
 
