--- a/frontend/src/app/views/perfil/perfil.component.html
+++ b/frontend/src/app/views/perfil/perfil.component.html
@@ -5,6 +5,7 @@
     <h2>{{ user.nomeUsuario }}</h2>
 
     <a [routerLink]="['../produtos/listar']" class="simple-button-blue" *ngIf="user.isProdutor">Meus Produtos</a>
+    <a [routerLink]="['../pedidos/recebidos']" class="simple-button-blue" *ngIf="user.isProdutor">Pedidos Recebidos</a>
     <a [routerLink]="['../pedidos/listar']" class="simple-button-blue" *ngIf="!user.isProdutor">Meus Pedidos</a>
     <a [routerLink]="['../perfil/editar']" class="simple-button-blue">Editar Perfil</a>
     <a (click)="logout()" class="simple-button-blue">Sair</a>
