--- a/frontend/src/app/views/time/time.component.html
+++ b/frontend/src/app/views/time/time.component.html
@@ -9,9 +9,8 @@
                         <img src="./../../../assets/avatar.png" alt="Avatar" style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
-                        <h1>Integrante 1</h1>
+                        <h1>Ananda</h1>
                         <p>JAVA Developer</p>
-                        <p>Descrição</p>
                     </div>
                 </div>
             </div>
@@ -21,9 +20,8 @@
                         <img src="./../../../assets/avatar.png" alt="Avatar" style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
-                        <h1>Integrante 2</h1>
-                        <p>DevOps Engineer</p>
-                        <p>Descrição</p>
+                        <h1>Arthur</h1>
+                        <p>JAVA Developer</p>
                     </div>
                 </div>
             </div>
@@ -33,9 +31,8 @@
                         <img src="./../../../assets/avatar.png" alt="Avatar" style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
-                        <h1>Integrante 3</h1>
-                        <p>Cloud Architect</p>
-                        <p>Descrição</p>
+                        <h1>Bruno</h1>
+                        <p>JAVA Developer</p>
                     </div>
                 </div>
             </div>
@@ -45,33 +42,30 @@
                         <img src="./../../../assets/avatar.png" alt="Avatar" style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
-                        <h1>Integrante 4</h1>
+                        <h1>Paulo</h1>
+                        <p>JAVA Developer</p>
+                    </div>
+                </div>
+            </div>
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="./../../../assets/avatar.png" alt="Avatar" style="width:300px;height:300px;">
+                    </div>
+                    <div class="flip-card-back">
+                        <h1>Richard</h1>
+                        <p>JAVA Developer</p>
+                    </div>
+                </div>
+            </div>
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="./../../../assets/avatar.png" alt="Avatar" style="width:300px;height:300px;">
+                    </div>
+                    <div class="flip-card-back">
+                        <h1>Wesley</h1>
                         <p>Angular Developer</p>
-                        <p>Descrição</p>
-                    </div>
-                </div>
-            </div>
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <img src="./../../../assets/avatar.png" alt="Avatar" style="width:300px;height:300px;">
-                    </div>
-                    <div class="flip-card-back">
-                        <h1>Integrante 5</h1>
-                        <p>UX/UI Designer</p>
-                        <p>Descrição</p>
-                    </div>
-                </div>
-            </div>
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <img src="./../../../assets/avatar.png" alt="Avatar" style="width:300px;height:300px;">
-                    </div>
-                    <div class="flip-card-back">
-                        <h1>Integrante 6</h1>
-                        <p>Data Scientist</p>
-                        <p>Descrição</p>
                     </div>
                 </div>
             </div>
