Ajuste no front do Footer e Header

--- a/frontend/src/app/components/template/footer/footer.component.html
+++ b/frontend/src/app/components/template/footer/footer.component.html
@@ -9,6 +9,6 @@
         <li><a [routerLink]="['cadastro']" >Cadastro</a></li>
         <li><a [routerLink]="['mapa']">Encontre produtores</a></li>
         <li><a [routerLink]="['time']">Nosso time</a></li>
-        <li><a [routerLink]="['contato']">Contato</a></li>
+        <!-- <li><a [routerLink]="['contato']">Contato</a></li> -->
     </ul>
 </footer>
