--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -9,7 +9,7 @@
         <li><a [routerLink]="['']">Home</a></li>
         <li><a [routerLink]="['mapa']">Encontre produtores</a></li>
         <li><a [routerLink]="['time']">Nosso time</a></li>
-        <li><a [routerLink]="['contato']">Contato</a></li>
+        <!-- <li><a [routerLink]="['contato']">Contato</a></li> -->
     </ul>
 
     <a *ngIf="!user.idUsuario" [routerLink]="['login']" class="simple-button">Login</a>
