Adicionar conteúdo na tela Home

--- a/frontend/src/app/views/home/home.component.html
+++ b/frontend/src/app/views/home/home.component.html
@@ -6,11 +6,11 @@
         <a [routerLink]="['mapa']" class="simple-button">Encontrar Produtores</a>
     </section>
     <section class="second-section">
-        <h2>Lorem ipsum</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea architecto temporibus culpa harum in tempora. Vitae eveniet reiciendis sit esse adipisci repellendus. Molestiae quasi minima numquam accusamus. Itaque, at quia?</p>
+        <h2>É um Agricultor?</h2>
+        <p>Cadastre-se no Agricolab e aproveite um espaço para divulgar e vender seus produtos de agricultura familiar.</p>
     </section>
     <section class="third-section">
-        <h2>Lorem ipsum</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea architecto temporibus culpa harum in tempora. Vitae eveniet reiciendis sit esse adipisci repellendus. Molestiae quasi minima numquam accusamus. Itaque, at quia?</p>
+        <h2>Quer comprar de um Agricultor?</h2>
+        <p>Para localizar agricultores utilize nosso mapa de busca, para encontrar não é necessário cadastro. <br><br>Caso deseje adquirir produtos dos agricultores, cadastre-se já e faça seus pedidos.</p>
     </section>
 </main>
